# TodoPlusPlus

./: .gitignore  CMakeLists.txt  FileIo.cpp  Input.cpp  README.md  Task.cpp  TodoList.cpp
include/: FileIo.hpp  Input.hpp  Menu.hpp  Task.hpp  TodoList.hpp  helpers.hpp
src/: Color.cpp  FileIo.cpp  Input.cpp  Manager.cpp  Menu.cpp  Task.cpp  TodoList.cpp  main.cpp
src/include/: Color.hpp  FileIo.hpp  Input.hpp  Manager.hpp  Menu.hpp  Priority.hpp  Task.hpp  TodoList.hpp  helpers.hpp
tasks/: tasks.csv
